# diffmerge

./: CMakeLists.txt  LICENSE  README.md
diffmerge/: README.md
include/: lcs.h
src/: diffmain.cc
unittests/: CMakeLists.txt  lcs_test.cc
